Fix .gitignore to include main CSV data file for Railway deployment
The CSV file 202507_.csv was being excluded by *_20*.csv pattern.
This caused Railway deployment to fail loading the actual data.
Now explicitly including the main data file while still excluding generated reports.

This should resolve the CSV file missing error on Railway.

--- a/.gitignore
+++ b/.gitignore
@@ -132,8 +132,10 @@ api_keys.txt
 # Generated reports (keep structure, ignore timestamped files)
 *_20*.html
 *_20*.json
-*_20*.csv
 *_20*.txt
+
+# Keep main data file but ignore generated timestamped reports
+!202507_.csv
 
 # IDE
 .vscode/
